--- a/gallery_post/23_pro_lee.html
+++ b/gallery_post/23_pro_lee.html
@@ -19,6 +19,6 @@ permalink: /gallery_post/23_pro_lee.html
   </style>
 </head>
 
-<img src="/post_image/23_banner_2.jpg" width="1150" height="550"><br>
+<img src="/post_image/banner_2.jpg" width="1150" height="550"><br>
 
 </html>
